# LLM

./: README.md  check_key.py  free_models.py  pyproject.toml  requirements.txt  test.ipynb  test_openrouter.py
.devcontainer/: .env.example  Dockerfile  devcontainer.json  extensions.json  settings.json  setup.sh
01/: HW.ipynb  documents.json  parse-faq.ipynb  pyproject.toml  rag-intro.ipynb  take_aways.md
01/web/: PROJECT_STRUCTURE.md  README.md  app.py  config_manager.py  core.py  docker-compose-qdrant.yaml  docker-compose.yaml  documents.json  documents_datatalks.json  eval_dashboard.ipynb  eval_diagnostic.md  fix_imports.py  generate_config.sh  ingest_data.py  langfuse_config.py  logger_config.py  nvidia.ipynb  nvidia_test.py  pipeline.py  prompt_manager.py  run_eval.py  run_experiment.py  run_hard_benchmark.py  run_overnight.sh  run_stats.py  run_test.py  run_vector_benchmark.py  search.py  service.py  settings.json  stats.py  test_llm_judge.py  test_rag_triad.py  top-k.md
01/web/EDA/: investigate.ipynb
01/web/analysis/: doc_embeddings.npy  doc_meta.json  embedding_viz.py  umap_reducer.joblib
01/web/configs/: elastic_search.json  search_configs.json  settings.json
01/web/data/: all_faqs.txt
01/web/data_cleaning/: dedup.py  download.py  extract_metadata.py  ingest.py  ingest_bge.py  ingest_es_bge_base.py  ingest_models.py  ingest_qdrant.py  parse.py  run_all.sh  train_test_split.py
01/web/eval/: ab_test_with_verify.py  benchmark_runner.py  classify_failures.py  dashboard.py  eda.py  eval_set.py  find_missing_queries.py  generate_test_queries.py  llm_judge_batched.py  llm_judge_debug.py  llm_judge_fixed.py  llm_judge_from_saved.py  llm_judge_optimized.py  llm_judge_with_examples.py  run_full_benchmark.py  run_judge.py  sample_llm_eval.py  (+2 more)
production_pipeline/01-data_cleaning/: 01_download.py  02_parse.py  03_dedup.py  README.md
production_pipeline/02-EDA/: 01_load_and_inspect.py
production_pipeline/03-generation/: 03_add_ood.py
production_pipeline/helpers/: __init__.py  nvidia_call.py
(+694 files in other folders)
