[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "asyncio>=4.0.0",
    "elasticsearch<8.0.0",
    "faiss-cpu>=1.13.2",
    "flask>=3.1.3",
    "gradio>=6.13.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.14",
    "langchain-openrouter>=0.2.1",
    "langfuse<3.0.0",
    "litellm>=1.83.0",
    "llama-index>=0.14.21",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-llms-litellm>=0.7.1",
    "matplotlib>=3.10.9",
    "minisearch>=1.0.1",
    "nltk>=3.9.4",
    "openai>=2.32.0",
    "pypdf>=6.10.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.17.1",
    "redis>=7.4.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.1",
    "statsmodels>=0.14.6",
    "tdqm>=0.0.1",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
]
